Add condition to run workflow only on specific repo

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,7 @@ permissions:
 
 jobs:
   build-and-release:
+    if: ${{ github.repository == 'qortal/Q-Wallets' }}
     runs-on: ubuntu-latest
     env:
       APP_NAME: ${{ github.event.repository.name }}
